--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio Esteban Barrón</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    Hola mundo
+
+    <div class="header">
+        <div class="logo">EB</div>
+        <div class="nav">
+            asdasd
+            asdasdasd
+            asd
+        </div>
+    </div>
+
     
     <script src="index.js"></script>
 </body>
