--- a/index.html
+++ b/index.html
@@ -1,25 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio Esteban Barrón</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    Hola mundo
-
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/a9dff9f9f0.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" href="images/laptop-code-solid.svg" type="image/svg+xml" />
+  </head>
+  <body>
     <div class="header">
-        <div class="logo">EB</div>
-        <div class="nav">
-            asdasd
-            asdasdasd
-            asd
+      <div class="logo">< EB /></div>
+      <div class="nav">
+        <nav>
+          <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Proyectos</a></li>
+            <li><a href="#">Habilidades</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    
+    <div class="contenedor-intro">
+      <div class="intro">
+        <img id="Esteban" src="images/Esteban.jpg" />
+        <div class="text">
+          <div class="name">
+            Esteban Barrón <i class="fa-solid fa-code"></i>
+          </div>
+          <div class="desc">Desarrollador Web</div>
         </div>
+      </div>
     </div>
 
-    
+    <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem animi,
+      voluptatum repellendus voluptatem ea, iure ipsum sit impedit id doloremque
+      enim aperiam quas quo inventore necessitatibus dignissimos quam dolorem
+      nobis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aut
+      earum perspiciatis quis perferendis doloribus itaque sunt officia, eaque
+      nobis ea distinctio iusto error odit possimus architecto blanditiis
+      eveniet maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
+      officia, eaque nobis ea distinctio iusto error odit possimus architecto
+      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
+      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
+      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
+      architecto blanditiis eveniet maiores. Lorem ipsum dolor sit amet
+      consectetur, adipisicing elit. Unde aut earum perspiciatis quis
+      perferendis doloribus itaque sunt officia, eaque nobis ea distinctio iusto
+      error odit possimus architecto blanditiis eveniet maiores.Lorem ipsum
+      dolor sit amet consectetur adipisicing elit. Rem animi, voluptatum
+      repellendus voluptatem ea, iure ipsum sit impedit id doloremque enim
+      aperiam quas quo inventore necessitatibus dignissimos quam dolorem nobis!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aut earum
+      perspiciatis quis perferendis doloribus itaque sunt officia, eaque nobis
+      ea distinctio iusto error odit possimus architecto blanditiis eveniet
+      maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+      aut earum perspiciatis quis perferendis doloribus itaque sunt officia,
+      eaque nobis ea distinctio iusto error odit possimus architecto blanditiis
+      eveniet maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
+      officia, eaque nobis ea distinctio iusto error odit possimus architecto
+      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
+      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
+      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
+      architecto blanditiis eveniet maiores.Lorem ipsum dolor sit amet
+      consectetur adipisicing elit. Rem animi, voluptatum repellendus voluptatem
+      ea, iure ipsum sit impedit id doloremque enim aperiam quas quo inventore
+      necessitatibus dignissimos quam dolorem nobis! Lorem ipsum dolor sit amet
+      consectetur, adipisicing elit. Unde aut earum perspiciatis quis
+      perferendis doloribus itaque sunt officia, eaque nobis ea distinctio iusto
+      error odit possimus architecto blanditiis eveniet maiores. Lorem ipsum
+      dolor sit amet consectetur, adipisicing elit. Unde aut earum perspiciatis
+      quis perferendis doloribus itaque sunt officia, eaque nobis ea distinctio
+      iusto error odit possimus architecto blanditiis eveniet maiores. Lorem
+      ipsum dolor sit amet consectetur, adipisicing elit. Unde aut earum
+      perspiciatis quis perferendis doloribus itaque sunt officia, eaque nobis
+      ea distinctio iusto error odit possimus architecto blanditiis eveniet
+      maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+      aut earum perspiciatis quis perferendis doloribus itaque sunt officia,
+      eaque nobis ea distinctio iusto error odit possimus architecto blanditiis
+      eveniet maiores.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Rem animi, voluptatum repellendus voluptatem ea, iure ipsum sit impedit id
+      doloremque enim aperiam quas quo inventore necessitatibus dignissimos quam
+      dolorem nobis! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
+      officia, eaque nobis ea distinctio iusto error odit possimus architecto
+      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
+      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
+      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
+      architecto blanditiis eveniet maiores. Lorem ipsum dolor sit amet
+      consectetur, adipisicing elit. Unde aut earum perspiciatis quis
+      perferendis doloribus itaque sunt officia, eaque nobis ea distinctio iusto
+      error odit possimus architecto blanditiis eveniet maiores. Lorem ipsum
+      dolor sit amet consectetur, adipisicing elit. Unde aut earum perspiciatis
+      quis perferendis doloribus itaque sunt officia, eaque nobis ea distinctio
+      iusto error odit possimus architecto blanditiis eveniet maiores.Lorem
+      ipsum dolor sit amet consectetur adipisicing elit. Rem animi, voluptatum
+      repellendus voluptatem ea, iure ipsum sit impedit id doloremque enim
+      aperiam quas quo inventore necessitatibus dignissimos quam dolorem nobis!
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aut earum
+      perspiciatis quis perferendis doloribus itaque sunt officia, eaque nobis
+      ea distinctio iusto error odit possimus architecto blanditiis eveniet
+      maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
+      aut earum perspiciatis quis perferendis doloribus itaque sunt officia,
+      eaque nobis ea distinctio iusto error odit possimus architecto blanditiis
+      eveniet maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
+      officia, eaque nobis ea distinctio iusto error odit possimus architecto
+      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
+      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
+      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
+      architecto blanditiis eveniet maiores.
+    </div>
+
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
