--- a/index.html
+++ b/index.html
@@ -13,20 +13,49 @@
     <link rel="icon" href="images/laptop-code-solid.svg" type="image/svg+xml" />
   </head>
   <body>
-    <div class="header">
+    <header>
       <div class="logo">< EB /></div>
       <div class="nav">
         <nav>
           <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#">Habilidades</a></li>
+            <li>
+              <a class="icono active" id="i" href="#inicio">
+                <div class="icono active">
+                  <i class="fa-solid fa-house-chimney"></i>
+                </div>
+                Inicio
+              </a>
+            </li>
+            <li>
+              <a class="icono" id="p" href="#proyectos">
+                <div class="icono">
+                  <i class="fa-solid fa-file-code"></i>
+                </div>
+                Proyectos
+              </a>
+            </li>
+            <li class="icono" data_url="habilidades">
+              <a id="h" href="#habilidades">
+                <div class="icono">
+                  <i class="fa-solid fa-brain"></i>
+                </div>
+                Habilidades
+              </a>
+            </li>
+            <li>
+              <a class="icono" id="c" href="#contacto">
+                <div class="icono">
+                  <i class="fa-solid fa-envelope"></i>
+                </div>
+                Contacto
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
-    </div>
-    
-    <div class="contenedor-intro">
+    </header>
+
+    <section id="inicio" class="seccion contenedor-intro">
       <div class="intro">
         <img id="Esteban" src="images/Esteban.jpg" />
         <div class="text">
@@ -36,90 +65,34 @@
           <div class="desc">Desarrollador Web</div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div>
+    <section class="seccion" id="proyectos">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem animi,
       voluptatum repellendus voluptatem ea, iure ipsum sit impedit id doloremque
       enim aperiam quas quo inventore necessitatibus dignissimos quam dolorem
       nobis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aut
       earum perspiciatis quis perferendis doloribus itaque sunt officia, eaque
-      nobis ea distinctio iusto error odit possimus architecto blanditiis
-      eveniet maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
-      officia, eaque nobis ea distinctio iusto error odit possimus architecto
-      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
-      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
-      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
-      architecto blanditiis eveniet maiores. Lorem ipsum dolor sit amet
-      consectetur, adipisicing elit. Unde aut earum perspiciatis quis
-      perferendis doloribus itaque sunt officia, eaque nobis ea distinctio iusto
-      error odit possimus architecto blanditiis eveniet maiores.Lorem ipsum
-      dolor sit amet consectetur adipisicing elit. Rem animi, voluptatum
-      repellendus voluptatem ea, iure ipsum sit impedit id doloremque enim
-      aperiam quas quo inventore necessitatibus dignissimos quam dolorem nobis!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aut earum
-      perspiciatis quis perferendis doloribus itaque sunt officia, eaque nobis
-      ea distinctio iusto error odit possimus architecto blanditiis eveniet
-      maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
-      aut earum perspiciatis quis perferendis doloribus itaque sunt officia,
-      eaque nobis ea distinctio iusto error odit possimus architecto blanditiis
-      eveniet maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
-      officia, eaque nobis ea distinctio iusto error odit possimus architecto
-      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
-      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
-      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
-      architecto blanditiis eveniet maiores.Lorem ipsum dolor sit amet
-      consectetur adipisicing elit. Rem animi, voluptatum repellendus voluptatem
-      ea, iure ipsum sit impedit id doloremque enim aperiam quas quo inventore
-      necessitatibus dignissimos quam dolorem nobis! Lorem ipsum dolor sit amet
-      consectetur, adipisicing elit. Unde aut earum perspiciatis quis
-      perferendis doloribus itaque sunt officia, eaque nobis ea distinctio iusto
-      error odit possimus architecto blanditiis eveniet maiores. Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Unde aut earum perspiciatis
-      quis perferendis doloribus itaque sunt officia, eaque nobis ea distinctio
-      iusto error odit possimus architecto blanditiis eveniet maiores. Lorem
-      ipsum dolor sit amet consectetur, adipisicing elit. Unde aut earum
-      perspiciatis quis perferendis doloribus itaque sunt officia, eaque nobis
-      ea distinctio iusto error odit possimus architecto blanditiis eveniet
-      maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
-      aut earum perspiciatis quis perferendis doloribus itaque sunt officia,
-      eaque nobis ea distinctio iusto error odit possimus architecto blanditiis
-      eveniet maiores.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      Rem animi, voluptatum repellendus voluptatem ea, iure ipsum sit impedit id
-      doloremque enim aperiam quas quo inventore necessitatibus dignissimos quam
-      dolorem nobis! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
-      officia, eaque nobis ea distinctio iusto error odit possimus architecto
-      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
-      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
-      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
-      architecto blanditiis eveniet maiores. Lorem ipsum dolor sit amet
-      consectetur, adipisicing elit. Unde aut earum perspiciatis quis
-      perferendis doloribus itaque sunt officia, eaque nobis ea distinctio iusto
-      error odit possimus architecto blanditiis eveniet maiores. Lorem ipsum
-      dolor sit amet consectetur, adipisicing elit. Unde aut earum perspiciatis
-      quis perferendis doloribus itaque sunt officia, eaque nobis ea distinctio
-      iusto error odit possimus architecto blanditiis eveniet maiores.Lorem
-      ipsum dolor sit amet consectetur adipisicing elit. Rem animi, voluptatum
-      repellendus voluptatem ea, iure ipsum sit impedit id doloremque enim
-      aperiam quas quo inventore necessitatibus dignissimos quam dolorem nobis!
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aut earum
-      perspiciatis quis perferendis doloribus itaque sunt officia, eaque nobis
-      ea distinctio iusto error odit possimus architecto blanditiis eveniet
-      maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde
-      aut earum perspiciatis quis perferendis doloribus itaque sunt officia,
-      eaque nobis ea distinctio iusto error odit possimus architecto blanditiis
-      eveniet maiores. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-      Unde aut earum perspiciatis quis perferendis doloribus itaque sunt
-      officia, eaque nobis ea distinctio iusto error odit possimus architecto
-      blanditiis eveniet maiores. Lorem ipsum dolor sit amet consectetur,
-      adipisicing elit. Unde aut earum perspiciatis quis perferendis doloribus
-      itaque sunt officia, eaque nobis ea distinctio iusto error odit possimus
-      architecto blanditiis eveniet maiores.
-    </div>
+
+    </section>
+
+    <section id="habilidades" class="seccion">
+      Habilidades:<br />
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vero cum
+      sit reprehenderit modi. Praesentium debitis dolorem distinctio nesciunt.
+      Assumenda vero non voluptas, magni amet veniam sapiente animi modi
+      praesentium.
+    </section>
+
+    <section id="contacto" class="seccion">
+      Contacto:<br />
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vero cum
+      sit reprehenderit modi. Praesentium debitis dolorem distinctio nesciunt.
+      Assumenda vero non voluptas, magni amet veniam sapiente animi modi
+      praesentium.
+    </section>
 
     <script src="index.js"></script>
+    
   </body>
 </html>
