--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           </ul>
         </nav>
       </div>
+      <div class="hamburger-icon">
+        <i class="fas fa-bars"></i>
+      </div>      
     </header>
 
     <section id="inicio" class="seccion contenedor-intro">
@@ -73,7 +76,6 @@
       enim aperiam quas quo inventore necessitatibus dignissimos quam dolorem
       nobis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde aut
       earum perspiciatis quis perferendis doloribus itaque sunt officia, eaque
-
     </section>
 
     <section id="habilidades" class="seccion">
@@ -93,6 +95,5 @@
     </section>
 
     <script src="index.js"></script>
-    
   </body>
 </html>
