Cambios responsive vh

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       </div>
       <div class="hamburger-icon">
         <i class="fas fa-bars"></i>
-      </div>      
+        <i class="fas fa-times"></i>
+      </div>
     </header>
 
     <section id="inicio" class="seccion contenedor-intro">
@@ -87,11 +88,28 @@
     </section>
 
     <section id="contacto" class="seccion">
-      Contacto:<br />
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae vero cum
-      sit reprehenderit modi. Praesentium debitis dolorem distinctio nesciunt.
-      Assumenda vero non voluptas, magni amet veniam sapiente animi modi
-      praesentium.
+      <div class="contacto">
+        <h2>Contactame en las siguientes plataformas</h2>
+        <ul>
+          <li>
+            <a href="https://wa.me/+51910503391"
+              ><i class="fa-brands fa-whatsapp"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/esteban-andrés-barrón-teodoro-a08580272/"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/ebarronteodoro">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <script src="index.js"></script>
