--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       </div>
     </header>
 
-    <section id="inicio" class="seccion contenedor-intro">
+    <section id="inicio" loading="lazy" class="seccion contenedor-intro">
       <div class="intro">
-        <img id="Esteban" src="images/Esteban.jpg" />
+        <img id="Esteban" loading="lazy" src="images/Esteban.jpg" />
         <div class="text">
           <div class="name">
             Esteban Barrón <i class="fa-solid fa-code"></i>
