--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
     <link rel="icon" href="images/laptop-code-solid.svg" type="image/svg+xml" />
   </head>
-  <body>
+  <body class=" ">
     <header>
       <div class="logo">< EB /></div>
       <div class="nav">
